# mango

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  library.json  library.mlf  package-lock.json  package.json  style.css  vue.config.js
build_automation/: build.py
src/: App.vue  Nav.vue  categorizer_service.rs  config.rs  index.html  invoke.js  invokes.js  main.js  main.rs  state.js  style.css  ui.js  ui.rs
src-tauri/: .gitignore  Cargo.toml  fsread  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  main.rs  resource_server.rs
src-tauri/src/categorizer_service/: library.rs
src/assets/styles/: theme.css
src/categorizer_service/: library.rs  mangadex.rs
src/components/: BackButton.vue  Nav.vue  PageButton.vue
src/components/etc/: ARImage.vue
src/components/icon/: XIcon.vue
src/router/: index.js
src/styles/: library_view.css  root.css
src/ui/: app.rs  chapter_view.rs  component_impl.rs  config_ui.rs  library_view.rs
src/ui/component_impl/: fixed_box.rs
