[package]
name = "mango"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
config = { version = "0.13.3", features = ["toml"] }
derive_builder = "0.12.0"
gtk = { version = "0.5.5", package = "gtk4" }
regex = "1.7.1"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
