[package]
name = "mango-yew-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version="0.20.0", features = ["csr"] }
bincode = "1.3.3"
derive-getters = "0.2.0"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
regex = "1.7.1"
serde_json = "1.0.91"

[workspace]
members = ["src-tauri"]
