[package]
name = "Mango"
version = "0.0.0"
description = "A fast, lightweight Manga reader for desktop use."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
bincode = "1.3.3"
derive-getters = "0.2.0"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
regex = "1.7.1"
serde_json = "1.0.91"
image-base64 = "0.1.0"
warp = { version = "0.3.3", features = ["tls"] }
tokio = { version = "1.25.0", features = ["signal"] }
urlencoding = "2.1.2"
image = "0.24.5"
imagesize = "0.11.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
